2003-02-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :

	  - Took out unnecessary constructors.

	  - Modified the verify() function to allow verification of ground
	    and non-ground atoms.

	  - A NULL ptr passed to cmp() will always cause false to be returned.

	  - Cleaned up cmp() and verify() functions.

	* kb/atomlist.cpp :
	* kb/atomlist.h :

	  - Added a ground indicator to allow or disallow non-ground atoms to
	    be added into the list.

	* kb/identifier.cpp :
	* kb/identifier.h :

	  - Added a macro to unconditionally compare two identifiers.

	  - A NULL ptr passed to cmp() will always cause false to be returned.

2003-02-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :
	* kb/atomlist.cpp :
	* kb/atomlist.h :

	  - Improved cmp functions.

	  - holds_atom, member_atom and subset_atom now inherits from the atom
	    class. Much cleaner this way.

	* kb/atom.cpp :
	* kb/atom.h :

	  - Added verify function to ensure integrity.

2003-02-24  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/Makefile.in :
	* kb/atomlist.cpp :
	* kb/atomlist.h :

	  - Added atom list class.

	* kb/atom.cpp :
	* kb/atom.h :

	  - Atom class is now a derived class of list_item. This is to make
	    way for the atomlist class.

	  - Added a cmp() function in atom.

2003-02-18  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :

	  - Fixed CFLAGS/CXXFLAGS = -L..\lib to -L../lib

	* common/vlad.h :

	  - Added a macro for new(nothrow)

	  - Changed new(nothrow) to new(std::nothrow) to keep gcc happy.

	* common/list.cpp :
	* kb/atom.cpp :
	* kb/identifier.cpp :
	* kb/symtab.cpp :
	* main/vlad.cpp :
	* parser/parser.y :
	* parser/scanner.l :

	  - Changed include directives to use stdc++ instead of stdc. Was 
	    causing "deprecated" warnings.

	  - Changed to use new macro.

	* main/Makefile.in :

	  - Took out strip --strip-all. Apparently, not all versions of strip 
	    support it.
